--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,3 +45,4 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - lib/src/features/chat/data/repositories/file/dummydata.json
