--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  uuid: ^3.0.7
+  
 
   flutter_bloc:
   dio:
@@ -21,7 +23,7 @@ dependencies:
   font_awesome_flutter:
   flutter_screenutil:
   equatable:
-  logger:
+  logger: ^1.3.0
   go_router:
   flutter_secure_storage:
 
