--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,15 @@ dependencies:
   logger: ^1.3.0
   go_router:
   flutter_secure_storage:
+  test: ^1.25.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  mockito: ^5.4.0
+  build_runner: ^2.4.0
 
 flutter:
   uses-material-design: true
